--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,3 +64,8 @@ test_script:
   - echo Running Test
   - cd utest
   - openblas_utest
+  - 7z a openblas.zip c:\projects\OpenBLAS
+
+artifacts:
+  - path: openblas.zip
+    name: openblas
